force-app/main/default/objects/Account/fields/CLV_Individual__c.field-meta.xml
<CustomField>
    <fullName>CLV_Individual__c</fullName>
    <label>CLV-Individual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>