force-app/main/default/objects/Account/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*</fullName>
            </value><value>
                <fullName>**</fullName>
            </value><value>
                <fullName>***</fullName>
            </value><value>
                <fullName>****</fullName>
            </value><value>
                <fullName>*****</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>