force-app/main/default/objects/Account/fields/Customer_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifetime_Value__c</fullName>
    <label>Customer Lifetime Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>