force-app/main/default/objects/Account/fields/Customer_Lifetime_Value_Individual__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifetime_Value_Individual__c</fullName>
    <label>Customer Lifetime Value Individual</label>
    <summarizedField>Opportunity__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity__c.Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>