force-app/main/default/objects/Account/fields/Customer_Source__c.field-meta.xml
<CustomField>
    <fullName>Customer_Source__c</fullName>
    <label>Customer Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted Lead</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>