force-app/main/default/objects/Account/fields/Debit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note_Amount__c</fullName>
    <label>Debit Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>