force-app/main/default/objects/Account/fields/Last_Deal_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Deal_Closure_Date__c</fullName>
    <label>Last Deal Closure Date</label>
    <type>Date</type>
</CustomField>