force-app/main/default/objects/Account/fields/Location_Site__c.field-meta.xml
<CustomField>
    <fullName>Location_Site__c</fullName>
    <label>Location/Site</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>