force-app/main/default/objects/Account/fields/Primary_Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Primary_Sales_Executive</relationshipName>
    <type>Lookup</type>
</CustomField>