force-app/main/default/objects/Account/fields/Purchase_Value_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Value_Current_FY__c</fullName>
    <label>Purchase Value (Current FY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>