force-app/main/default/objects/Account/listViews/Accounts_By_Industry.listView-meta.xml
<ListView>
    <fullName>Accounts_By_Industry</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <label>Accounts By Industry</label>
</ListView>