force-app/main/default/objects/Account/listViews/Accounts_By_Owner.listView-meta.xml
<ListView>
    <fullName>Accounts_By_Owner</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.OWNERSHIP</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Accounts By Owner</label>
</ListView>